# ecommerce-project

./: .env.example  README.md  docker-compose.yml
server/: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  openapi.json
server/migrations/2024-12-03-104202_init/: down.sql  up.sql
server/openapi/: admin.json  admin.yaml
server/src/: main.rs  schema.rs
server/src/application/: mod.rs  response.rs
server/src/application/dto/: mod.rs  product_count_options.rs
server/src/application/use_cases/: create_product.rs  get_sales_data.rs  mod.rs
server/src/domain/entities/: download_verification.rs  mod.rs  order.rs  product.rs  timestamp.rs  user.rs
server/src/domain/repositories/: mod.rs  order_repository.rs  product_repository.rs  storage_repository.rs  user_repository.rs
server/src/domain/services/: mod.rs  order_service.rs  product_service.rs  storage_service.rs  user_service.rs
server/src/errors/: api_error.rs  error_response.rs  json_error.rs  mod.rs
server/src/infrastructure/: app_state.rs  mod.rs  web.rs
server/src/infrastructure/db/: connection.rs  mod.rs  sequence.rs
server/src/infrastructure/lib/: mod.rs  sequence_converter.rs  utils.rs
server/src/infrastructure/repositories/: mod.rs  postgres_download_verification_repository.rs  postgres_order_repository.rs  postgres_product_repository.rs  postgres_user_repository.rs  repository.rs  s3_storage_repository.rs
server/src/infrastructure/s3/: connection.rs  utils.rs
server/src/presentation/: mod.rs
server/src/presentation/admin/: mod.rs
server/src/test/: test_util.rs
(+30 files in other folders)
