[package]
name = "ecommerce-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
actix-web = "4.9.0"
actix-multipart = "0.7.2"
env_logger = "0.11.5"
log = "0.4.22"
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
async-trait = "0.1.83"
serde = { version = "1.0.215", features = ["derive"] }
scalar-doc = { version = "0.1.0", features = ["actix"] }
aws-sdk-s3 = { version = "1.65.0", features = ["rt-tokio", "behavior-version-latest"] }
thiserror = "2.0.6"
serde_json = "1.0.133"
